--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Miso-portfolio</title>
-  </head>
-  <body>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Font Awesome for icons -->
+</head>
+<body>
     <nav class="navbar">
-      <div class="logo">
-        KIM <span style="color: rgba(187, 187, 187, 0.885)"> MISO </span>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="skills">Skills</a></li>
-      </ul>
+        <div class="logo">
+            KIM <span style="color: rgba(187, 187, 187, 0.885)"> MISO </span>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#skills">Skills</a></li>
+        </ul>
+        <div class="hamburger">
+            <i class="fas fa-bars" style="background-color: orange;"></i>  <!-- ☰ Icon -->
+        </div>
     </nav>
-    
-  </body>
+    <script src="script/script.js"></script>
+</body>
 </html>
-     
-
