--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-
 </li>
 <li>
   <a
-    href="misoGallery.html"
+    href="images.html"
     class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
     >Images</a
   >
